# jirash

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/lib_jsh/: Cargo.toml
src/lib_jsh/src/: config.rs  lib.rs  parser.rs  shell.rs  state.rs
src/lib_jsh/src/commands/: api.rs  mod.rs  registry.rs  whoami.rs
